2008-02-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/save.py (WizardSaver._handleVideoOverlay): 
	Simplify overlay handling by always linking video and then let the overlay
	unlink and relink. Rename and reorganize some methods.

	* flumotion/wizard/models.py (Component.unlink): New method

	* flumotion/component/consumers/httpstreamer/httpstreamer.glade: 
	* flumotion/component/consumers/httpstreamer/admin_gtk.py:
	* flumotion/component/misc/httpserver/httpserver.glade: 
	* flumotion/component/misc/httpserver/admin_gtk.py:
	Tweak the UI by moving the URL out of the toplevel table

2008-02-29  Johan Dahlinsd  <johan@gnome.org>

	* flumotion/test/test_wizard_save.py: Remove unused imports

	* flumotion/wizard/save.py: Remove extra 4 at the top of the file. Grr.

	* flumotion/test/test_wizard_models.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/models.py:
	Remove the Flow class and the tests, we never ended up using it, since the
	state is fetched after the completion of the wizard, not during.

2008-02-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/ui/wizard.py:
	Remove flowName here, it should only be set in a subclass

	* flumotion/wizard/conversionsteps.py:
	Remove get_muxer, we're not using it any longer.

	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py:
	* flumotion/wizard/basesteps.py:
	Move getServerConsumers and getPorters to the base class

	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/save.py:
	Separate the component building from extraction of step state, 
	so the save logic can be reused by other interfaces. 
	This completes the wizard MVC separation!

2008-02-29  Michael Smith <msmith@fluendo.com>

	* flumotion/component/converters/overlay/overlay.py:
	  Add a warning to the component if we're running with videomixer 0.10.7,
	  since it has a bug that results in many CRITICALs being printed (one per
	  frame).

2008-02-29  Johan Dahlin  <johan@gnome.org>
